# NavAI

./: .env.example  .gitignore  LICENSE  README.md  mlnav.dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: pr_agent.yml
config/MLNav/: params.yaml
config/RLNav/: params.yaml
config/rlnav/: params.yaml
data/scenarios/: .gitignore  Files_Test.dvc  configs.dvc  scenario_910_000_CS_KINEMATIC_20230221_HIGHWAY.dvc  scenario_911_000_CS_KINEMATIC_20230227_SEMIURBAN.dvc  scenario_912_000_CS_KINEMATIC_20230327_HIGHWAY.dvc  scenario_913_000_CS_KINEMATIC_20230310_URBAN.dvc  scenario_914_000_CS_KINEMATIC_20230518_HIGHWAY.dvc  scenario_915_000_CS_KINEMATIC_20230522_SEMIURBAN_1.dvc  scenario_916_000_CS_KINEMATIC_20230522_SEMIURBAN_2.dvc  scenario_917_000_CS_KINEMATIC_20230525_URBAN.dvc  scenario_918_000_CS_KINEMATIC_20230529_HIGHWAY.dvc  scenario_920_000_CS_KINEMATIC_20230703_URBAN.dvc  scenario_924_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20230921.dvc  scenario_925_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20230922.dvc  scenario_926_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20230926.dvc  scenario_927_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20230927.dvc  scenario_928_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20230928.dvc  scenario_929_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231002.dvc  scenario_930_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231003.dvc  scenario_931_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231003.dvc  scenario_932_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231003.dvc  scenario_933_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231003.dvc  scenario_934_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231004.dvc  scenario_935_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231004.dvc  scenario_936_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231005.dvc  scenario_937_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231005.dvc  scenario_938_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231004.dvc  scenario_939_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231004.dvc  scenario_941_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231017.dvc  scenario_942_000_GPSGALBDS_CSIRELAND_L1L5_KINEMATIC_20231017.dvc  scenario_943_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231025.dvc  scenario_944_000_GPSGALBDS_CSIRELAND_L1L2_KINEMATIC_20231025.dvc  (+7 more)
docker/: MLNav.Dockerfile  RLNav.Dockerfile
models/: .gitignore  policy_247_enc.dvc
reports/: .gitignore  KIPOS2KML.py  PosAnalysisKML.py  RewardAnalysis.py  metrics.json
(+182 files in other folders)
