[build-system]
requires = ["setuptools>=42", "wheel"]   # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "NavAI"
version = "0.1.0"
description = "Artificial Intelligence-Based Optimization of Precise Point Positioning (PPP) to achieve Adaptive Multipath Mitigation and Measurement Weighting in GNSS Positioning systems."
readme = "README.md"
requires-python = ">=3.8"


[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = true