[project]
name = "navai"
version = "0.1.0"
description = "Artificial Intelligence-Based Optimization of Precise Point Positioning (PPP) to achieve Adaptive Multipath Mitigation and Measurement Weighting in GNSS Positioning systems."
authors = [
    {name = "Alvaro Tena",email = "alvarotenatamayo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "apache-airflow[celery] (==2.9.0)",
    "pygit2 (>=1.17.0,<2.0.0)",
    "dvc (>=3.59.1,<4.0.0)",
    "dvc-ssh (>=4.2.1,<5.0.0)",
    "dvc-s3 (>=3.2.0,<4.0.0)",
    "build (>=1.2.2.post1,<2.0.0)",
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-box (>=7.3.2,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "neptune (>=1.13.0,<2.0.0)",
    "tables (>=3.10.0,<4.0.0)",
    "simplejson (<=3.18)",
    "swifter (>=1.4.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[project.optional-dependencies]
ml = ["yellowbrick (>=1.5,<2.0)", "umap-learn (>=0.5.7,<0.6.0)", "hyperopt (>=0.2.7,<0.3.0)", "h5py (>=3.13.0,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)"]
rl = ["tensorflow (==2.15)", "nbformat (>=5.10.4,<6.0.0)", "pyarrow (>=19.0.1,<20.0.0)", "tf-agents (>=0.19.0,<0.20.0)", "neptune-tensorboard (>=1.0.3,<2.0.0)", "folium (>=0.19.5,<0.20.0)", "pyproj (>=3.7.1,<4.0.0)", "plotly (>=6.0.0,<7.0.0)", "geopy (>=2.4.1,<3.0.0)", "genv (>=1.4.3,<2.0.0)"]
[tool.poetry]
packages = [
  { include = "mlnav", from = "src" },
  { include = "navutils", from = "src" },
  { include = "pewrapper", from = "src" },
  { include = "rlnav", from = "src" }
]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
